--- a/cfp/index.html
+++ b/cfp/index.html
@@ -28,7 +28,7 @@ title: IEEE SWC 2025 CFP
       <div>
         <h3>Calgary Telus Convention Center</h3>
         <h3>Calgary, Alberta, Canada</h3>
-        <h3 class="">August 18 - 22, 2025</h3>
+        <h3 class="">{{site.data.swc_data.dates.conferenceDates}}</h3>
       </div>
       <div>
         <a
@@ -44,6 +44,9 @@ title: IEEE SWC 2025 CFP
 <section
   class="page-section container-fluid px-5 py-5 mt-2 d-flex flex-column gap-4"
 >
+  <div class="alert alert-primary" role="alert">
+    Paper submission deadline has been extended to <b>May 1</b>
+  </div>
   <div class="row g-5">
     <div class="col-sm-4 d-flex flex-column gap-4">
       <div class="card bg-light-subtle">
@@ -55,27 +58,32 @@ title: IEEE SWC 2025 CFP
           <h5 class="fs-6 fw-bold text-center">
             Full Paper Submission Deadline
           </h5>
-          <h6 class="">March 31, 2025</h6>
+          <h6 class="text-decoration-line-through">April 14, 2025</h6>
+          <h6 class="">{{site.data.swc_data.dates.paperSubmission}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
-          <h6 class="">May 31, 2025</h6>
+          <h6 class="">{{site.data.swc_data.dates.authorsNotification}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Demo/Poster/WiP Paper Due</h5>
-          <h6 class="">June 15, 2025</h6>
+          <h6 class="">{{site.data.swc_data.dates.demoPosterWIPPaperDue}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
-          <h6 class="">June 30, 2025</h6>
+          <h6 class="">{{site.data.swc_data.dates.cameraReadyDue}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Tutorial/WS/SS Proposal Due</h5>
-          <h6 class="">March 15, 2025</h6>
+          <h6 class="">
+            {{site.data.swc_data.dates.tutorialWorkshopSpecialSessionDue}}
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
             Tutorial/WS/SS Proposal Acceptance
           </h5>
-          <h6 class="">March 31, 2025</h6>
+          <h6 class="">
+            {{site.data.swc_data.dates.tutorialWorkshopSpecialSessionAcceptance}}
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Conference Dates</h5>
-          <h6 class="">August 18 - 22, 2025</h6>
+          <h6 class="">{{site.data.swc_data.dates.conferenceDates}}</h6>
         </div>
       </div>
       <div class="card bg-light-subtle">
