--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -23,7 +23,9 @@ title: SEGA Workshop 2025
         The 1st International Workshop on Smart Education in the Age of
         Generative AI (SEGA) 2025
       </h1>
-      <a href="./CFP_SEGA_2025.pdf" class="btn btn-primary w-50">Call For Papers</a>
+      <a href="./CFP_SEGA_2025.pdf" class="btn btn-primary w-50"
+        >Call For Papers</a
+      >
     </div>
   </div>
 </section>
@@ -90,34 +92,34 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">
                 Marco Ho <br />
                 British Columbia Institute of Technology, Canada <br />
-                <a href="mailto:marco_ho@bcit.ca"
-                  >marco_ho@bcit.ca</a
-                >
+                <a href="mailto:marco_ho@bcit.ca">marco_ho@bcit.ca</a>
               </h5>
             </div>
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column w-100">
-            <h5 class="fs-6 fw-bold">Advisory Committee (in alphabetical
-              order of last names)</h5>
+            <h5 class="fs-6 fw-bold">
+              Advisory Committee (in alphabetical order of last names)
+            </h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
                 Mohamed Ally <br />
                 Athabasca University, Canada <br />
                 <a href="mailto:mohameda@athabascau.ca"
-                  >mohameda@athabascau.ca</a>
+                  >mohameda@athabascau.ca</a
+                >
               </h5>
               <h5 class="fs-6">
                 Jon Dron<br />
                 Athabasca University, Canada <br />
-                <a href="mailto:jond@athabascau.ca"
-                  >jond@athabascau.ca</a>
+                <a href="mailto:jond@athabascau.ca">jond@athabascau.ca</a>
               </h5>
               <h5 class="fs-6">
                 Giancarlo Fortino <br />
                 The University of Calabria, Italy <br />
                 <a href="mailto:giancarlo.fortino@unical.it"
-                  >giancarlo.fortino@unical.it</a>
+                  >giancarlo.fortino@unical.it</a
+                >
               </h5>
               <h5 class="fs-6">
                 Oscar Lin <br />
@@ -145,7 +147,19 @@ title: SEGA Workshop 2025
       <div>
         <h2 class="fs-2 mb-2">Join us for the SEGA Workshop 2025</h2>
         <p class="fs-5">
-          This workshop seeks to bridge innovation and responsibility in AI-enhanced education by uniting researchers, educators, and technologists. It will explore a range of Machine Learning (ML) and Artificial Intelligence (AI) methodologies—including generative AI, reinforcement learning, supervised and unsupervised learning, and user-centered design—to address challenges such as content quality, ethical alignment, and adaptive learning systems. Participants will examine strategies to optimize AI- and ML-generated educational materials, enhance human-AI interaction frameworks, and implement personalized learning pathways. Submissions employing computational, empirical, or design-based approaches are welcome. The workshop particularly encourages interdisciplinary contributions that advance both efficacy and equity in education.
+          This workshop seeks to bridge innovation and responsibility in
+          AI-enhanced education by uniting researchers, educators, and
+          technologists. It will explore a range of Machine Learning (ML) and
+          Artificial Intelligence (AI) methodologies—including generative AI,
+          reinforcement learning, supervised and unsupervised learning, and
+          user-centered design—to address challenges such as content quality,
+          ethical alignment, and adaptive learning systems. Participants will
+          examine strategies to optimize AI- and ML-generated educational
+          materials, enhance human-AI interaction frameworks, and implement
+          personalized learning pathways. Submissions employing computational,
+          empirical, or design-based approaches are welcome. The workshop
+          particularly encourages interdisciplinary contributions that advance
+          both efficacy and equity in education.
         </p>
       </div>
       <div class="row">
@@ -156,17 +170,32 @@ title: SEGA Workshop 2025
               <h5 class="fs-5">Key topics include:</h5>
               <ul>
                 <li>Technical Challenges in AI- and ML-Driven Education</li>
-                <li>Methodologies and Tools (e.g., RL, LLMs, supervised/unsupervised learning, user-centered design)</li>
+                <li>
+                  Methodologies and Tools (e.g., RL, LLMs,
+                  supervised/unsupervised learning, user-centered design)
+                </li>
                 <li>Human-AI Interaction Design</li>
                 <li>Ethical and Governance Considerations</li>
                 <li>Case Studies and Applications</li>
               </ul>
               <h5 class="fs-5">The workshop invites contributions on:</h5>
               <ul>
-                <li>Novel AI/ML/RL algorithms and other computational methods for educational content generation and adaptation</li>
-                <li>Empirical studies on AI/ML’s impact on learning outcomes, self-regulation, student engagement, and instructor workloads</li>
-                <li>Frameworks for evaluating AI- and/or ML-generated content validity, accessibility, and inclusivity</li>
-                <li>Ethical guidelines, participatory design, and policy frameworks for responsible AI/ML integration in education</li>
+                <li>
+                  Novel AI/ML/RL algorithms and other computational methods for
+                  educational content generation and adaptation
+                </li>
+                <li>
+                  Empirical studies on AI/ML’s impact on learning outcomes,
+                  self-regulation, student engagement, and instructor workloads
+                </li>
+                <li>
+                  Frameworks for evaluating AI- and/or ML-generated content
+                  validity, accessibility, and inclusivity
+                </li>
+                <li>
+                  Ethical guidelines, participatory design, and policy
+                  frameworks for responsible AI/ML integration in education
+                </li>
               </ul>
             </div>
           </div>
@@ -176,16 +205,15 @@ title: SEGA Workshop 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h2 class="fs-2">Submission Guidelines</h2>
           <p class="fs-5">
-            To respect the efforts of reviewers and in the interest of 
-            fairness to all prospective authors, we request that all submissions 
-            to SEGA 2025 follow the formatting and submission rules detailed 
-            below. To maintain a review process that is fair to all potential 
-            authors, submissions that violate these instructions may not be 
-            reviewed.
+            To respect the efforts of reviewers and in the interest of fairness
+            to all prospective authors, we request that all submissions to SEGA
+            2025 follow the formatting and submission rules detailed below. To
+            maintain a review process that is fair to all potential authors,
+            submissions that violate these instructions may not be reviewed.
           </p>
           <h5 class="fs-4">Requirements</h5>
           <p class="fs-5">
-            We invite submissions in two categories: regulars (6 pages) and 
+            We invite submissions in two categories: regulars (6 pages) and
             short papers (4 pages) excluding references.
           </p>
           <ul>
@@ -195,17 +223,41 @@ title: SEGA Workshop 2025
             <li>Ensure that the figures and tables are legible</li>
           </ul>
           <p class="fs-5">
-            A submission can have at most 2 additional pages with the pages overlength charge if accepted. The material presented should be original and not published or under submission elsewhere. All manuscripts should be formatted manuscripts must be in English, following the IEEE two-column manuscript templates for conference proceedings instructions: 
-            <a href="https://www.ieee.org/conferences/publishing/templates.html">
-              Template</a>
+            A submission can have at most 2 additional pages with the pages
+            overlength charge if accepted. The material presented should be
+            original and not published or under submission elsewhere. All
+            manuscripts should be formatted manuscripts must be in English,
+            following the IEEE two-column manuscript templates for conference
+            proceedings instructions:
+            <a
+              href="https://www.ieee.org/conferences/publishing/templates.html"
+            >
+              Template</a
+            >
             <br /><br />
-            All types of papers should be submitted via the conferences’ EDAS system. Authors should register with the EDAS system first, and then make the submission via the conference link. Declare all the authors of the paper upfront. Addition/removal of authors once the paper is accepted will have to be approved by the program chairs, since it potentially undermines the goal of eliminating conflicts for reviewer assignment.
+            All types of papers should be submitted via the conferences’ EDAS
+            system. Authors should register with the EDAS system first, and then
+            make the submission via the conference link. Declare all the authors
+            of the paper upfront. Addition/removal of authors once the paper is
+            accepted will have to be approved by the program chairs, since it
+            potentially undermines the goal of eliminating conflicts for
+            reviewer assignment.
           </p>
-          <a href="https://edas.info/newPaper.php?c=33582&track=131098" class="btn btn-primary w-50">Submit Your Work</a>
+          <a
+            href="https://edas.info/newPaper.php?c=33582&track=131098"
+            class="btn btn-primary w-50"
+            >Submit Your Work</a
+          >
           <br /><br />
           <h2 class="fs-2">Publication</h2>
           <p class="fs-5">
-            SEGA 2025 is scheduled as a hybrid meeting. For each accepted paper, at least one author must register and participate in the workshop. All accepted workshop papers will be published by IEEE CPS (IEEE-DL and EI indexed). Best Paper Awards will be presented to high quality papers. Selected papers will be recommended to special issues. More details can be found via <a href="http://ieee-smart-world.org/2025/">SWC Website</a>
+            SEGA 2025 is scheduled as a hybrid meeting. For each accepted paper,
+            at least one author must register and participate in the workshop.
+            All accepted workshop papers will be published by IEEE CPS (IEEE-DL
+            and EI indexed). Best Paper Awards will be presented to high quality
+            papers. Selected papers will be recommended to special issues. More
+            details can be found via
+            <a href="http://ieee-smart-world.org/2025/">SWC Website</a>
           </p>
         </div>
       </div>
@@ -213,70 +265,7 @@ title: SEGA Workshop 2025
   </div>
 </section>
 
-<section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="fs-2 text-center">IEEE SWC 2025 Colocated Conferences</h2>
-    <div class="row pb-3 g-4 justify-content-center">
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE Digital Twin 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 2025 IEEE Digital Twin Conference
-            </h5>
-            <a href="/digitaltwin" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE MVS 2025</h3>
-            <h5 class="fs-6 text-center">
-              The IEEE International Conference on Metaverse 2025
-            </h5>
-            <a href="/metaverse" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ScalCom 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 25th IEEE International Conference on Scalable Computing and
-              Communications
-            </h5>
-            <a href="/scalcom" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE UIC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE International Conference on Ubiquitous Intelligence
-              and Computing
-            </h5>
-            <a href="/uic" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ATC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE Autonomous and Trusted Vehicle Conference
-            </h5>
-            <a href="/atc" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include colocated-conferences.html %}
 
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
