--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -50,7 +50,8 @@ title: IEEE Digital Twin 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Paper Submission Deadline</h5>
-          <h6 class=""> April 14, 2025 (extended)</h6>
+          <h6 class="text-decoration-line-through">April 14, 2025</h6>
+          <h6>{{site.data.swc_data.dates.paperSubmission}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Workshop Papers Deadline</h5>
           <h6 class="">February 15, 2025</h6>
@@ -295,15 +296,14 @@ title: IEEE Digital Twin 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Digital Twin 2025 Paper Publication</h3>
           <p class="fs-5">
-            All Digital Twin 2025 papers must be submitted via the EDAS system
-            at this link <a href="https://edas.info/N33584">EDAS</a>. Regular,
-            Workshop and Forum papers are limited to 8, 6 and 3 pages
-            respectively. All manuscripts should be formatted in the
-            <a href="https://www.ieee.org/conferences/publishing/templates.html"
-              >IEEE Computer Society Proceedings Format</a
-            >, and submitted in the Portable Document Format (.pdf). Accepted
-            papers will be published by IEEE (IEEE-DL and EI indexed) in the
-            Smart World Congress Proceedings. Best Paper Awards will be
+            All papers need to be submitted electronically through the
+            conference submission website (EDAS) in PDF format at EDAS. Each
+            paper is limited to 8 pages (or 10 pages with over-length charge)
+            for a regular full paper, 6 pages (or 8 pages with over-length
+            charge) for a full paper including figures and references using the
+            IEEE Computer Society Proceedings manuscripts style.<br /><br />
+            Accepted papers will be published by IEEE (IEEE-DL and EI indexed)
+            in the Smart World Congress Proceedings. Best Paper Awards will be
             presented to high quality papers. Selected papers will be
             recommended to a number of special issues of prestigious journal.
           </p>
@@ -319,57 +319,7 @@ title: IEEE Digital Twin 2025
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="fs-2 text-center">IEEE SWC 2025 Colocated Conferences</h2>
-    <div class="row pb-3 g-4 justify-content-center">
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE Metaverse 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 2025 IEEE International Conference on Metaverse
-            </h5>
-            <a href="/metaverse" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ScalCom 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 25th IEEE International Conference on Scalable Computing and
-              Communications
-            </h5>
-            <a href="/scalcom" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE UIC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE International Conference on Ubiquitous Intelligence
-              and Computing
-            </h5>
-            <a href="/uic" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ATC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE Autonomous and Trusted Vehicle Conference
-            </h5>
-            <a href="/atc" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  {% include colocated-conferences.html %}
 </section>
 
 <section
