--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -54,10 +54,11 @@ title: IEEE MVS 2025
           <h5 class="fs-6 fw-bold text-center">
             Full Paper Submission Deadline
           </h5>
-          <h6 class=""> April 14, 2025 (extended)</h6>
+          <h6 class="text-decoration-line-through">April 14, 2025</h6>
+          <h6>{{site.data.swc_data.dates.paperSubmission}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
-          <h6 class=""> May 31, 2025</h6>
+          <h6 class="">May 31, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Demo/Poster/WiP Paper Due</h5>
           <h6 class="">June 15, 2025</h6>
@@ -328,17 +329,23 @@ title: IEEE MVS 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Submission & Publication</h3>
           <p class="fs-5">
-            Authors are invited to submit their original research work using
-            IEEE CS Proceedings format via Metaverse website. Regular paper (8
-            pages), Work-in Progress (WiP) paper (4~6 pages), Demo/Poster paper
-            (2~4 pages), Workshop & Special Session paper (6 pages) are
-            solicited. Detailed instructions are on the website. Accepted papers
-            will be included into the proceedings published by IEEE CPS (EI
-            indexed). At least one author of any accepted paper is required to
-            register and present the paper at the conference. Extended versions
-            of selected papers will be considered for fast-track publication in
-            special issues of some prestigious journals, e.g. Computers and
-            Education: X-reality (CEXR)
+            All papers need to be submitted electronically through the
+            conference submission website (EDAS) in PDF format at EDAS. Each
+            paper is limited to 8 pages (or 10 pages with over-length charge)
+            for a regular full paper, 6 pages (or 8 pages with over-length
+            charge) for a full paper including figures and references using the
+            IEEE Computer Society Proceedings manuscripts style.
+            <br /><br />
+            Work-in Progress (WiP) paper (4~6 pages), Demo/Poster paper (2~4
+            pages), Workshop & Special Session paper (6 pages) are solicited.
+            Detailed instructions are on the website.
+            <br /><br />
+            Accepted papers will be included into the proceedings published by
+            IEEE CPS (EI indexed). At least one author of any accepted paper is
+            required to register and present the paper at the conference.
+            Extended versions of selected papers will be considered for
+            fast-track publication in special issues of some prestigious
+            journals, e.g. Computers and Education: X-reality (CEXR)
           </p>
           <h4>Manuscript Preparation</h4>
           <ul class="fs-5 m-0">
@@ -532,57 +539,7 @@ title: IEEE MVS 2025
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="fs-2 text-center">IEEE SWC 2025 Colocated Conferences</h2>
-    <div class="row pb-3 g-4 justify-content-center">
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE Digital Twin 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 2025 IEEE Digital Twin Conference
-            </h5>
-            <a href="/digitaltwin" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ScalCom 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 25th IEEE International Conference on Scalable Computing and
-              Communications
-            </h5>
-            <a href="/scalcom" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE UIC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE International Conference on Ubiquitous Intelligence
-              and Computing
-            </h5>
-            <a href="/uic" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ATC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE Autonomous and Trusted Vehicle Conference
-            </h5>
-            <a href="/atc" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  {% include colocated-conferences.html %}
 </section>
 
 <section
