--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -51,7 +51,8 @@ title: IEEE ScalCom 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Paper Submission Deadline</h5>
-          <h6 class=""> April 14, 2025 (extended)</h6>
+          <h6 class="text-decoration-line-through">April 14, 2025</h6>
+          <h6>{{site.data.swc_data.dates.paperSubmission}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
           <h6 class="">June 1, 2025</h6>
@@ -290,21 +291,13 @@ title: IEEE ScalCom 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Paper Submission</h3>
           <p class="fs-5">
-            All papers must be submitted electronically in PDF format via the
-            conference submission website (EDAS), following the IEEE Computer
-            Society Proceedings manuscript style. The page limits are:
+            All papers need to be submitted electronically through the
+            conference submission website (EDAS) in PDF format at EDAS. Each
+            paper is limited to 8 pages (or 10 pages with over-length charge)
+            for a regular full paper, 6 pages (or 8 pages with over-length
+            charge) for a full paper including figures and references using the
+            IEEE Computer Society Proceedings manuscripts style.
           </p>
-          <ul class="fs-5 m-0">
-            <li>
-              Regular full papers: 8 pages (or 10 pages with an over-length
-              charge), including figures and references
-            </li>
-            <li>
-              Full papers: 6 pages (or 7 pages with an over-length charge),
-              including figures and references You may submit your work under
-              either of these page limits.
-            </li>
-          </ul>
           <p class="fs-5">
             Based on the reviews, the program committee will determine whether a
             paper is accepted and, if so, in which category.
@@ -333,58 +326,7 @@ title: IEEE ScalCom 2025
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="fs-2 text-center">IEEE SWC 2025 Colocated Conferences</h2>
-    <div class="row pb-3 g-4 justify-content-center">
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle h-100">
-          <div
-            class="card-body d-flex flex-column justify-content-between gap-4 h-100"
-          >
-            <h3 class="text-center">IEEE Digital Twin 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 2025 IEEE Digital Twin Conference
-            </h5>
-            <a href="/digitaltwin" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE MVS 2025</h3>
-            <h5 class="fs-6 text-center">
-              The IEEE International Conference on Metaverse 2025
-            </h5>
-            <a href="/metaverse" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE UIC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE International Conference on Ubiquitous Intelligence
-              and Computing
-            </h5>
-            <a href="/uic" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ATC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE Autonomous and Trusted Vehicle Conference
-            </h5>
-            <a href="/atc" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  {% include colocated-conferences.html %}
 </section>
 
 <section
