--- a/workshops/index.html
+++ b/workshops/index.html
@@ -20,7 +20,8 @@ title: Workshops
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
-        IEEE Smart World Congress Workshops 2025
+        IEEE Smart World Congress 2025 <br />
+        Workshops
       </h1>
       <!-- <h3 class="w-75 responsive-width fw-medium text-center">
         Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
@@ -31,39 +32,6 @@ title: Workshops
       </div>
     </div>
   </div>
-</section>
-
-<section class="page-section container-fluid px-5 d-flex flex-column gap-2">
-  <div class="row g-5">
-    <div class="col-sm-12 d-flex flex-column gap-4">
-      <h2 class="fs-2">
-        AI and Machine Learning: Transforming Data Analytics for Global Impact
-        on Sustainability, Healthcare, and a Resilient Future
-      </h2>
-      <p class="fs-5">
-        In an era defined by unprecedented data volumes and complex global
-        challenges, this session aims to explore the transformative role of
-        Artificial Intelligence (AI) and Machine Learning (ML) in redefining
-        data analytics across critical domains such as healthcare,
-        sustainability, and intelligent systems. As AI and ML technologies
-        mature, this session offers a crucial platform to address urgent
-        real-world problems and shape innovative solutions that drive global
-        resilience and progress. Participants will engage in discussions about
-        advancements that enhance data-driven decision-making, intelligent
-        computing, and smart communication systems, fostering cross-disciplinary
-        collaboration. The session will serve as a nexus for researchers,
-        practitioners, and thought leaders to share cutting-edge methods,
-        applications, and visionary directions in AI and data analytics with
-        global impact.
-      </p>
-    </div>
-  </div>
-  <div class="flex flex-row justify-content-start pb-3">
-    <a href="/workshops/ai-and-machine-learning/" class="btn btn-primary"
-      >View Workshop</a
-    >
-  </div>
-  <hr />
 </section>
 
 <section class="page-section container-fluid px-5 d-flex flex-column gap-2">
@@ -166,70 +134,7 @@ title: Workshops
   <hr />
 </section>
 
-<section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="fs-2 text-center">IEEE SWC 2025 Colocated Conferences</h2>
-    <div class="row pb-3 g-4 justify-content-center">
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE Digital Twin 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 2025 IEEE Digital Twin Conference
-            </h5>
-            <a href="/digitaltwin" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE MVS 2025</h3>
-            <h5 class="fs-6 text-center">
-              The IEEE International Conference on Metaverse 2025
-            </h5>
-            <a href="/metaverse" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ScalCom 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 25th IEEE International Conference on Scalable Computing and
-              Communications
-            </h5>
-            <a href="/scalcom" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE UIC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE International Conference on Ubiquitous Intelligence
-              and Computing
-            </h5>
-            <a href="/uic" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ATC 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 22nd IEEE Autonomous and Trusted Vehicle Conference
-            </h5>
-            <a href="/atc" class="btn btn-primary w-100">View</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include colocated-conferences.html %}
 
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
