Fixed SEGA merge

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -74,7 +74,7 @@ title: SEGA Workshop 2025
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column w-100">
-            <h5 class="fs-6 fw-bold">Publicity Chair</h5>
+            <h5 class="fs-6 fw-bold">Program Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
                 Marco Ho <br />
