Updated paper submission alerts

--- a/cfp/index.html
+++ b/cfp/index.html
@@ -42,7 +42,7 @@ title: IEEE SWC 2025 CFP
 </section>
 
 <section
-  class="page-section container-fluid px-5 py-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-3"
 >
   <div class="alert alert-primary" role="alert">
     Paper submission deadline has been extended to <b>May 1</b>
