Work on colocated conference styles

--- a/contact/index.html
+++ b/contact/index.html
@@ -24,7 +24,9 @@ title: Contact
   </div>
 </section>
 
-<section class="page-section container-fluid px-5 d-flex flex-column gap-2">
+<section
+  class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2"
+>
   <div class="row pt-4">
     <h2 class="fs-2">
       For questions with any of the following topics please contact us
@@ -85,10 +87,11 @@ title: Contact
       </ul>
     </div>
   </div>
-  <hr />
 </section>
 
-{% include colocated-conferences.html %}
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  {% include colocated-conferences.html %}
+</section>
 
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
