--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -175,7 +175,9 @@ title: FUSION Workshop 2025
   </div>
 </section>
 
-{% include colocated-conferences.html %}
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  {% include colocated-conferences.html %}
+</section>
 
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
