--- a/workshops/index.html
+++ b/workshops/index.html
@@ -101,7 +101,8 @@ title: Workshops
   </div>
   <hr />
 </section>
-<section class="page-section container-fluid px-5 d-flex flex-column gap-2">
+
+<section class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2">
   <div class="row pt-4">
     <div class="col-sm-12 d-flex flex-column gap-4">
       <h2 class="fs-2">
@@ -131,10 +132,11 @@ title: Workshops
   <div class="flex flex-row justify-content-start pb-3">
     <a href="/workshops/fusion/" class="btn btn-primary">View Workshop</a>
   </div>
-  <hr />
 </section>
 
-{% include colocated-conferences.html %}
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  {% include colocated-conferences.html %}
+</section>
 
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
