--- a/workshops/next-gen-networking/index.html
+++ b/workshops/next-gen-networking/index.html
@@ -190,7 +190,9 @@ title: Next Generation Networking Workshop 2025
   </div>
 </section>
 
-{% include colocated-conferences.html %}
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  {% include colocated-conferences.html %}
+</section>
 
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
