--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -90,9 +90,7 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">
                 Thomas Kin-Fung Chiu<br />
                 The Chinese University of Hong Kong, Hong Kong<br />
-                <a href="mailto:tchiu@cuhk.edu.hk"
-                  >tchiu@cuhk.edu.hk</a
-                >
+                <a href="mailto:tchiu@cuhk.edu.hk">tchiu@cuhk.edu.hk</a>
               </h5>
             </div>
           </div>
@@ -265,7 +263,9 @@ title: SEGA Workshop 2025
   </div>
 </section>
 
-{% include colocated-conferences.html %}
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  {% include colocated-conferences.html %}
+</section>
 
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
