--- a/contact/index.html
+++ b/contact/index.html
@@ -28,57 +28,57 @@ title: Contact
   class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2"
 >
   <div class="row pt-4">
-    <h2 class="fs-2">
-      For questions with any of the following topics please contact us
-    </h2>
     <div class="col-sm-12 d-flex flex-column gap-4">
+      <h2 class="fs-2">
+        For questions with any of the following topics please contact us
+      </h2>
       <ul class="fs-5 list-unstyled">
-        <li>
+        <li class="mb-2">
           For questions about <strong>Local logistics</strong> including visa
           application: Dr. Abbas Mahbod &lt;<a
             href="mailto:abbas.mahbod1@ucalgary.ca"
             >abbas.mahbod1@ucalgary.ca</a
           >&gt;
         </li>
-        <li>
+        <li class="mb-2">
           For questions about <strong>Web pages</strong>: Raymond Morland &lt;<a
             href="mailto:rmorland@athabascau.ca"
             >rmorland@athabascau.ca</a
           >&gt;
         </li>
-        <li>
+        <li class="mb-2">
           For questions about <strong>Paper EDAS submissions</strong>: Program
           Chair(s) of each conference or workshop
         </li>
-        <li>
+        <li class="mb-2">
           For questions about <strong>Registrations</strong>: Dr. Steve Drew
           &lt;<a href="mailto:steve.drew@ucalgary.ca">steve.drew@ucalgary.ca</a
           >&gt;
         </li>
-        <li>
+        <li class="mb-2">
           For questions about the <strong>Congress Program</strong>: Prof. Reza
           Malekian &lt;<a href="mailto:reza.malekian@ieee.org"
             >reza.malekian@ieee.org</a
           >&gt;
         </li>
-        <li>
+        <li class="mb-2">
           For questions about <strong>Publication</strong>: Dr. Xueqin Liang
           &lt;<a href="mailto:xueqin.liang@ieee.org">xueqin.liang@ieee.org</a
           >&gt;
         </li>
-        <li>
+        <li class="mb-2">
           For questions about <strong>Tutorials</strong>: Prof. Hong Lin &lt;<a
             href="mailto:linh@uhd.edu"
             >linh@uhd.edu</a
           >&gt;
         </li>
-        <li>
+        <li class="mb-2">
           For questions about <strong>Workshops or Special Sessions</strong>:
           Dr. Qiang John Ye &lt;<a href="mailto:qiang.ye@ucalgary.ca"
             >qiang.ye@ucalgary.ca</a
           >&gt;
         </li>
-        <li>
+        <li class="mb-2">
           For questions about <strong>Exhibitions</strong>: Dr. Rahman C. Ashiq
           &lt;<a href="mailto:C.Ashiq.Rahman@calgary.ca"
             >C.Ashiq.Rahman@calgary.ca</a
