--- a/venue/index.html
+++ b/venue/index.html
@@ -64,6 +64,8 @@ title: Venue - Calgary
   </div>
 </section>
 
+<div class="page-section px-5"><hr /></div>
+
 <section
   class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
@@ -97,6 +99,8 @@ title: Venue - Calgary
   </div>
 </section>
 
+<div class="page-section px-5"><hr /></div>
+
 <section
   class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
@@ -125,6 +129,8 @@ title: Venue - Calgary
     </div>
   </div>
 </section>
+
+<div class="page-section px-5"><hr /></div>
 
 <section
   class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
